# GlistEngine

./: .gitattributes  .gitignore  GETTING-STARTED.md  INSTALLATION-LINUX.md  INSTALLATION-MACOS.md  INSTALLATION-WIN.md  README.md  annotated.html  annotated_dup.js  classes.html  classgAES-members.html  classgAES.html  classgAES.js  classgAES__coll__graph.map  classgAES__coll__graph.md5  classgAES__inherit__graph.md5  classgAllocatableBase-members.html  classgAllocatableBase.html  classgAllocatableBase.js  classgAndroidWindow-members.html  classgAndroidWindow.html  classgAndroidWindow.js  classgAndroidWindow__inherit__graph.map  classgAndroidWindow__inherit__graph.md5  classgAnimationTrigger-members.html  classgAnimationTrigger.html  classgAnimationTrigger.js  classgAppManager-members.html  classgAppManager.html  classgAppManager.js  classgAppManager__coll__graph.map  classgAppManager__coll__graph.md5  classgAppManager__inherit__graph.map  classgAppManager__inherit__graph.md5  classgAppObject-members.html  classgAppObject.html  classgAppObject.js  classgAppObject__coll__graph.map  classgAppObject__coll__graph.md5  classgAppObject__inherit__graph.map  (+2455 more)
engine/: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  gConfig.h.in
engine/animation/: gSpriteAnimation.cpp  gSpriteAnimation.h  gSpriteAnimator.cpp  gSpriteAnimator.h
engine/base/: gBaseApp.cpp  gBaseApp.h  gBaseCanvas.cpp  gBaseCanvas.h  gBaseComponent.cpp  gBaseComponent.h  gBaseGUIObject.cpp  gBaseGUIObject.h  gBaseParticles.cpp  gBaseParticles.h  gBasePlugin.cpp  gBasePlugin.h  gBasePostProcess.cpp  gBasePostProcess.h
engine/core/: backward.cpp  backward.hpp  gAndroidWindow.cpp  gAndroidWindow.h  gAppManager.cpp  gAppManager.h  gAppObject.cpp  gAppObject.h  gBaseWindow.cpp  gBaseWindow.h  gCanvasManager.cpp  gCanvasManager.h  gEngine.cpp  gEngine.h  gGLFWWindow.cpp  gGLFWWindow.h  gGLRenderEngine.cpp  gGLRenderEngine.h  gGUIActionManager.cpp  gGUIActionManager.h  gGUIAppThread.cpp  gGUIAppThread.h  gGUIManager.cpp  gGUIManager.h  gGUIRendererContext.cpp  gGUIRendererContext.h  gInputManager.cpp  gInputManager.h  gInputPlayer.cpp  gInputPlayer.h  gObject.cpp  gObject.h  gPostProcessManager.cpp  gPostProcessManager.h  gRenderObject.cpp  gRenderObject.h  gRenderer.cpp  gRenderer.h
engine/events/: gEvent.h  gEventHook.cpp  gEventHook.h  gWindowEvents.h
engine/graphics/: gAllocatableBase.cpp  gAllocatableBase.h  gBoundingBox.cpp  gBoundingBox.h  gCamera.cpp  gCamera.h  gCameraController.cpp  gCameraController.h  gFbo.cpp  gFbo.h  gFog.cpp  gFog.h  gFont.cpp  gFont.h  gGrid.cpp  gGrid.h  gImage.cpp  gImage.h  gLight.cpp  gLight.h  gMaterial.cpp  gMaterial.h  gMesh.cpp  gMesh.h  gModel.cpp  gModel.h  gModelAnimator.cpp  gModelAnimator.h  gMorphingMesh.cpp  gMorphingMesh.h  gNode.cpp  gNode.h  gRay.cpp  gRay.h  gRect.cpp  gRect.h  gShader.cpp  gShader.h  gShadowMap.cpp  gShadowMap.h  (+12 more)
engine/graphics/particles/: gFireParticles.cpp  gFireParticles.h  gFireworksParticles.cpp  gFireworksParticles.h
engine/graphics/posteffects/: gBloom.cpp  gBloom.h  gBlur.cpp  gBlur.h  gChromaticAberration.cpp  gChromaticAberration.h  gColorAdjustments.cpp  gColorAdjustments.h  gColorChannelMixer.cpp  gColorChannelMixer.h  gColorCurves.cpp  gColorCurves.h  gDynamicGrain.cpp  gDynamicGrain.h  gEdgeDetection.cpp  gEdgeDetection.h  gGrain.cpp  gGrain.h  gGrayscale.cpp  gGrayscale.h  gHighContrast.cpp  gHighContrast.h  gInversion.cpp  gInversion.h  gKernelEffect.cpp  gKernelEffect.h  gSepiatone.cpp  gSepiatone.h  gShadowsMidtonesHighlights.cpp  gShadowsMidtonesHighlights.h  gSharpen.cpp  gSharpen.h  gSoftFocus.cpp  gSoftFocus.h  gStaticGrain.cpp  gStaticGrain.h  gTiltShift.cpp  gTiltShift.h  gVignette.cpp  gVignette.h  (+2 more)
engine/graphics/primitives/: gArc.cpp  gArc.h  gBox.cpp  gBox.h  gCircle.cpp  gCircle.h  gCircleSlice.cpp  gCircleSlice.h  gCone.cpp  gCone.h  gCross.cpp  gCross.h  gCylinder.cpp  gCylinder.h  gLine.cpp  gLine.h  gPlane.cpp  gPlane.h  gRec.cpp  gRec.h  gRectangle.cpp  gRectangle.h  gRoundedRectangle.cpp  gRoundedRectangle.h  gSphere.cpp  gSphere.h  gTerrain.cpp  gTerrain.h  gTriangle.cpp  gTriangle.h  gTube.cpp  gTube.h
engine/graphics/shaders/: brdf_frag.glsl  brdf_vert.glsl  color_frag.glsl  color_vert.glsl  cubemap_vert.glsl  equirectangular_frag.glsl  fbo_frag.glsl  fbo_vert.glsl  font_frag.glsl  font_vert.glsl  grid_frag.glsl  grid_vert.glsl  (+25 more)
engine/media/: gBaseSound.cpp  gBaseSound.h  gFmodSound.cpp  gFmodSound.h  gRecorder.cpp  gRecorder.h  gSound.cpp  gSound.h  gSoundRecorder.cpp  gSoundRecorder.h  gVideo.cpp  gVideo.h
engine/shaders/: skybox_frag.glsl  skybox_frag_gles.glsl  skybox_vert.glsl  skybox_vert_gles.glsl
engine/tools/: ShaderToHeader.cpp
engine/types/: gColor.cpp  gColor.h  gConstants.h  gMatrix4.cpp  gMatrix4.h
engine/ui/: gGUIBitmap.cpp  gGUIBitmap.h  gGUIButton.cpp  gGUIButton.h  gGUICakeGraph.cpp  gGUICakeGraph.h  gGUICandleStickChart.cpp  gGUICandleStickChart.h  gGUICheckbox.cpp  gGUICheckbox.h  gGUIColorPicker.cpp  gGUIColorPicker.h  gGUIColorbox.cpp  gGUIColorbox.h  gGUIColumnChart.cpp  gGUIColumnChart.h  gGUIContainer.cpp  gGUIContainer.h  gGUIContextMenu.cpp  gGUIContextMenu.h  gGUIControl.cpp  gGUIControl.h  gGUIDate.cpp  gGUIDate.h  gGUIDialogue.cpp  gGUIDialogue.h  gGUIDivider.cpp  gGUIDivider.h  gGUIDropdownList.cpp  gGUIDropdownList.h  gGUIEvents.h  gGUIForm.cpp  gGUIForm.h  gGUIFrame.cpp  gGUIFrame.h  gGUIGraph.cpp  gGUIGraph.h  gGUIGrid.cpp  gGUIGrid.h  gGUIImageButton.cpp  (+63 more)
engine/utils/: gAES.cpp  gAES.h  gAndroidUtil.cpp  gAndroidUtil.h  gAssetLoader.cpp  gAssetLoader.h  gDatabase.cpp  gDatabase.h  gFile.cpp  gFile.h  gHttpFile.cpp  gHttpFile.h  gKeyCode.h  gLocalization.cpp  gLocalization.h  gThread.cpp  gThread.h  gTracy.cpp  gTracy.h  gTypes.h  gUUID.cpp  gUUID.h  gUtils.cpp  gUtils.h  gWindows.cpp  gWindows.h
samples/gisEmpty/: .cproject  .project  CMakeLists.txt  README.md
samples/gisImageMasking/: CMakeLists.txt
samples/gisLight/: .cproject  .project  CMakeLists.txt
samples/gisPostEffect/: .cproject  .gitignore  .project  CMakeLists.txt  GEMINI-main.md
(+237 files in other folders)
